--- a/cartridges/nodejs-0.6/template/README
+++ b/cartridges/nodejs-0.6/template/README
@@ -36,14 +36,14 @@ of use.  The following list are some common variables but far from exhaustive:
     process.env.OPENSHIFT_DATA_DIR  - For persistent storage (between pushes)
     process.env.OPENSHIFT_TMP_DIR   - Temp storage (unmodified files deleted after 10 days)
 
-When embedding a database using rhc-ctl-app, you can reference environment
+When embedding a database using 'rhc app cartridge add', you can reference environment
 variables for username, host and password:
     process.env.OPENSHIFT_DB_HOST      - DB host
     process.env.OPENSHIFT_DB_PORT      - DB Port
     process.env.OPENSHIFT_DB_USERNAME  - DB Username
     process.env.OPENSHIFT_DB_PASSWORD  - DB Password
 
-When embedding a NoSQL database using rhc-ctl-app, you can reference environment
+When embedding a NoSQL database using 'rhc app cartridge add', you can reference environment
 variables for username, host and password:
     process.env.OPENSHIFT_NOSQL_DB_HOST      - NoSQL DB host
     process.env.OPENSHIFT_NOSQL_DB_PORT      - NoSQL DB Port
