--- a/site/config/locales/en.yml
+++ b/site/config/locales/en.yml
@@ -55,4 +55,5 @@ en:
 
   rest_api:
     errors:
-      '116': "Type is required and cannot be blank."
+      '116': 'Type is required and cannot be blank.'
+      '121': 'You have already saved this public key with a different name. Provide a different key here.'
