--- a/cartridges/raw-0.1/template/README
+++ b/cartridges/raw-0.1/template/README
@@ -1,11 +1,19 @@
 Feel free to change or remove this file, it is informational only.
 
+Get started
+===========
+1. Add framework of choice to your repo.
+2. Modify .openshift/action_hooks/start to start your application.
+   The application is required to bind to $OPENSHIFT_INTERNAL_IP:8080.
+3. Modify .openshift/action_hooks/stop to stop your application.
+4. Commit and push your changes.
+
 Repo layout
 ===========
 static/ - Externally exposed static content goes here
-misc/ - For not-externally exposed php code
 ../data - For persistent data (full path in environment var: OPENSHIFT_DATA_DIR)
-deplist.txt - list of pears to install
+.openshift/action_hooks/start - Script that gets run to start your application
+.openshift/action_hooks/stop - Script that gets run to stop your application
 .openshift/action_hooks/pre_build - Script that gets run every git push before the build
 .openshift/action_hooks/build - Script that gets run every git push as part of the build process (on the CI system if available)
 .openshift/action_hooks/deploy - Script that gets run every git push after build but before the app is restarted
@@ -28,6 +36,7 @@ Environment Variables
 OpenShift Express provides several environment variables to reference for ease
 of use.  The following list are some common variables but far from exhaustive:
 
+    $_ENV['OPENSHIFT_INTERNAL_IP']  - IP Address assigned to the application
     $_ENV['OPENSHIFT_APP_NAME']  - Application name
     $_ENV['OPENSHIFT_APP_DIR']   - Application dir
     $_ENV['OPENSHIFT_DATA_DIR']  - For persistent storage (between pushes)
