make help pages fast on admin tools and sync output from migrate

--- a/misc/maintenance/bin/migrate-2.0.6
+++ b/misc/maintenance/bin/migrate-2.0.6
@@ -11,6 +11,8 @@ RHLOGINS = nil #['rhlogin']
 MAX_THREADS = 10
 WORK_DIR = '/tmp/rhc/migration'
 
+STDOUT.sync, STDERR.sync = true
+
 #
 #  Migrate the specified app
 #
