--- a/misc/maintenance/bin/migrate-2.0.7
+++ b/misc/maintenance/bin/migrate-2.0.7
@@ -1,11 +1,9 @@
 #!/usr/bin/env ruby
-# Usage: ./migrate-2.0.7 > out.txt
-$:.unshift('/var/www/libra/broker')
-require 'config/environment'
 require 'rubygems'
 require 'pp'
 require 'thread'
 require 'thread-dump'
+require 'getoptlong'
 
 RHLOGINS = nil #['rhlogin']
 MAX_THREADS = 10
@@ -16,8 +14,8 @@ STDOUT.sync, STDERR.sync = true
 #
 #  Migrate the specified app
 #
-def migrate_app(server_identity, framework, uuid, rhlogin, app_name)
-  migrate_cmd = "#{__FILE__} '#{server_identity}' '#{framework}' '#{uuid}' '#{rhlogin}' '#{app_name}'"
+def migrate_app(rhlogin, app_name)
+  migrate_cmd = "#{__FILE__} --rhlogin '#{rhlogin}' --migrate-app '#{app_name}'"
   out =  "Migrating app on node with: #{migrate_cmd}\n"
   migrated = false
   begin
@@ -25,6 +23,9 @@ def migrate_app(server_identity, framework, uuid, rhlogin, app_name)
     if user
       app  = Application.find(user, app_name)
       if app
+        uuid = app.gear.uuid
+        framework = app.framework
+        server_identity = app.gear.server_identity
         begin
           Timeout::timeout(180) do
             Express::Broker::ApplicationContainerProxy.rpc_exec('libra', server_identity) do |client|
@@ -150,7 +151,7 @@ end
 #
 # Migrate applications between 2.0.6 and 2.0.7
 #
-def migrate(continue=false)
+def migrate(continue=false, target_server_identity=nil)
   start_time = Time.now.to_i
   puts "Getting all RHLogins..."
   users = []
@@ -188,12 +189,14 @@ def migrate(continue=false)
           app_name = app.name
           if app.gear
             server_identity = app.gear.server_identity
-            mutex.synchronize do
-              node_to_apps[server_identity] = [] unless node_to_apps[server_identity]
-              node_to_users[server_identity] = [] unless node_to_users[server_identity]
-              node_to_apps[server_identity] << {:name => app_name, :app => app}
-              node_to_users[server_identity] << user
-              app_cnt += 1
+            if (!target_server_identity || (server_identity == target_server_identity))
+              mutex.synchronize do
+                node_to_apps[server_identity] = [] unless node_to_apps[server_identity]
+                node_to_users[server_identity] = [] unless node_to_users[server_identity]
+                node_to_apps[server_identity] << {:name => app_name, :app => app}
+                node_to_users[server_identity] << user
+                app_cnt += 1
+              end
             end
           else
             puts "ERROR: Gear not found for app: '#{app_name}' of user #{user.login}"
@@ -281,7 +284,7 @@ def migrate(continue=false)
 end
 
 def write_node_to_file(server_identity, apps, node_to_users)
-  f = "#{WORK_DIR}/migrate_#{server_identity}"
+  f = migrate_file_path(server_identity)
   puts "Writing #{apps.length} apps for node #{server_identity} to file #{f}"
   users = node_to_users[server_identity]
   FileUtils.mkdir_p WORK_DIR
@@ -292,21 +295,33 @@ def write_node_to_file(server_identity, apps, node_to_users)
     app_name = app_hash[:name]
     user = users[index]
     rhlogin = user.login
-    migrate_on_node_args = "#{app.gear.server_identity},#{app.framework},#{app.gear.uuid},#{rhlogin},#{app_name}"
+    migrate_on_node_args = "#{app.gear.server_identity},#{app.gear.uuid},#{rhlogin},#{app_name}"
     append_to_file(f, migrate_on_node_args)
   end
 end
 
+def error_file_path(server_identity)
+  "#{WORK_DIR}/migrate_errors_#{server_identity}"
+end
+
+def log_file_path(server_identity)
+  "#{WORK_DIR}/migrate_log_#{server_identity}"
+end
+
+def migrate_file_path(server_identity)
+  "#{WORK_DIR}/migrate_#{server_identity}"
+end
+
 def migrate_node(server_identity, continue)
   puts "Migrating apps on node #{server_identity}"
-  error_file = "#{WORK_DIR}/migrate_errors_#{server_identity}"
+  error_file = error_file_path(server_identity)
   FileUtils.rm_f error_file unless continue
   FileUtils.touch error_file
-  log_file = "#{WORK_DIR}/migrate_log_#{server_identity}"
+  log_file = log_file_path(server_identity)
   FileUtils.rm_f log_file unless continue
   FileUtils.touch log_file
-  f = "#{WORK_DIR}/migrate_#{server_identity}"
-  migrate_node_cmd = "#{__FILE__} '#{f}'"
+  f = migrate_file_path(server_identity)
+  migrate_node_cmd = "#{__FILE__} --migrate-file '#{f}'"
   output, exit_code = execute_script(migrate_node_cmd)
   puts output
   file = File.open(error_file, "r")
@@ -333,20 +348,18 @@ def migrate_from_file(file)
     if line && !line.empty?
       params = line.chomp.split(',')
       server_identity = params[0] 
-      framework = params[1]
-      uuid = params[2]
-      rhlogin = params[3]
-      app_name = params[4]
-      migrate_on_node_cmd = "#{__FILE__} '#{server_identity}' '#{framework}' '#{uuid}' '#{rhlogin}' '#{app_name}'"
-      error_file = "#{WORK_DIR}/migrate_errors_#{server_identity}"
-      log_file = "#{WORK_DIR}/migrate_log_#{server_identity}"
+      uuid = params[1]
+      rhlogin = params[2]
+      app_name = params[3]
+      migrate_on_node_cmd = "#{__FILE__} --rhlogin '#{rhlogin}' --migrate-app '#{app_name}'"
+      error_file = error_file_path(server_identity)
+      log_file = log_file_path(server_identity)
       append_to_file(log_file,  "Migrating app '#{app_name}' with uuid '#{uuid}' on node '#{server_identity}' for user: #{rhlogin}")
       num_tries = 2
       (1..num_tries).each do |i|
         begin
-          output = migrate_app(server_identity, framework, uuid, rhlogin, app_name)
+          output = migrate_app(rhlogin, app_name)
           append_to_file(log_file, output)
-          
           break
         rescue Exception => e
           if i == num_tries
@@ -415,16 +428,72 @@ def execute_script(cmd, num_tries=1, timeout=28800)
   return output, exitcode
 end
 
-if ARGV.length == 1
-  if ARGV[0] == '--continue'
-    migrate(true)
-  else
-    migrate_from_file(ARGV[0])
+def p_usage
+    puts <<USAGE
+
+Usage: #{$0}
+
+  --rhlogin rhlogin                    User rhlogin
+  --migrate-app app_name               App name of the single app to migrate 
+  --migrate-node server_identity       Server identity of the node to migrate
+  --migrate-file file                  File containing the apps to migrate
+  --continue                           Flag indicating to continue a previous migration
+
+USAGE
+exit 255
+end
+
+begin
+  opts = GetoptLong.new(
+    ["--rhlogin", GetoptLong::REQUIRED_ARGUMENT],
+    ["--migrate-app", GetoptLong::REQUIRED_ARGUMENT],
+    ["--migrate-node", GetoptLong::REQUIRED_ARGUMENT],
+    ["--migrate-file", GetoptLong::REQUIRED_ARGUMENT],
+    ["--continue", GetoptLong::NO_ARGUMENT],
+    ["--help", "-h", GetoptLong::NO_ARGUMENT]
+  )
+  opt = {}
+  opts.each do |o, a|
+    opt[o[2..-1]] = a.to_s
   end
-elsif ARGV.length == 5
-  puts migrate_app(ARGV[0], ARGV[1], ARGV[2], ARGV[3], ARGV[4])
+rescue Exception => e
+  p_usage
+end
+
+if opt['help']
+  p_usage
+end
+
+$:.unshift('/var/www/libra/broker')
+require 'config/environment'
+
+if opt['migrate-file']
+  migrate_from_file(opt['migrate-file'])
+elsif opt['migrate-app']
+  if opt['rhlogin']
+    puts migrate_app(opt['rhlogin'], opt['migrate-app'])
+  else
+    puts "--rhlogin is required with --migrate-app"
+  end
+elsif opt['migrate-node']
+  migrate_file = migrate_file_path(opt['migrate-node'])
+  if opt['continue']
+    migrate(true, opt['migrate-node'])
+  elsif File.exists?(migrate_file)
+      puts <<-WARNING
+!!!!!!!!!!!!!!!!!!!! EXISTING MIGRATION DATA FOUND !!!!!!!!!!!!!!!!!!!!
+Data from a previous migration exists at #{migrate_file}.  You must 
+either move/remove (Ex: rm #{migrate_file}) that data or pick up
+where it left off with '#{__FILE__} --migrate-node #{opt['migrate-node']} --continue'.
+WARNING
+      exit 1
+  else
+    migrate(false, opt['migrate-node'])
+  end
 else
-  if File.exists?("/tmp/rhc/migration")
+  if opt['continue']
+    migrate(true)
+  elsif File.exists?("/tmp/rhc/migration")
     puts <<-WARNING
 !!!!!!!!!!!!!!!!!!!! EXISTING MIGRATION DATA FOUND !!!!!!!!!!!!!!!!!!!!
 Data from a previous migration exists at /tmp/rhc/migration.  You must 
@@ -432,6 +501,7 @@ either move/remove (Ex: rm -rf /tmp/rhc/migration) that data or pick up
 where it left off with '#{__FILE__} --continue'.
 WARNING
     exit 1
+  else
+    migrate
   end
-  migrate
 end
