--- a/misc/maintenance/bin/migrate-2.0.7
+++ b/misc/maintenance/bin/migrate-2.0.7
@@ -77,6 +77,22 @@ end
 #
 # Update node profile (only 2.0.6->2.0.7)
 #
+def object_node_profile(obj)
+  begin
+    old = obj.node_profile
+    if obj.node_profile == "std"
+      obj.node_profile = "small"
+    elsif obj.node_profile == "large"
+      obj.node_profile = "medium"
+    end
+    if old != obj.node_profile
+      return true
+    end
+  rescue NoMethodError
+  end
+  return false
+end
+
 def update_node_profile(app)
   changed = false
 
@@ -88,18 +104,7 @@ def update_node_profile(app)
   end
 
   objects.each do |obj|
-    begin
-      old = obj.node_profile
-      if obj.node_profile == "std"
-        obj.node_profile = "small"
-      elsif obj.node_profile == "large"
-        obj.node_profile = "medium"
-      end
-      if old != obj.node_profile
-          changed = true
-      end
-    rescue NoMethodError
-    end
+    changed = changed | object_node_profile(obj)
   end
 
   if changed
@@ -242,6 +247,15 @@ def migrate(continue=false, target_server_identity=nil)
       update_node_profile(app)
     end
   end
+
+  # Migrate the district sizes
+  districts = District.find_all()
+  districts.each do |district|
+    if object_node_profile(district)
+      district.save
+    end
+  end
+
   
   node_to_apps = {}
   node_to_users = {}
