--- a/misc/maintenance/bin/migrate-2.0.7
+++ b/misc/maintenance/bin/migrate-2.0.7
@@ -240,6 +240,14 @@ def migrate(continue=false, target_server_identity=nil)
     end
   end
   
+  #Migrate the app/gear sizes
+  users.each do |user|
+    user.env_vars.each_key do |key|
+      user.env_vars[key] = user.env_vars[key].gsub("/var/lib/libra", "/var/lib/stickshift")
+      user.env_vars[key] = user.env_vars[key].gsub("/usr/libexec/li", "/usr/libexec/stickshift")
+      user.save
+    end
+  end
 
   #Migrate the app/gear sizes
   users.each do |user|
