--- a/misc/maintenance/bin/migrate-2.0.8
+++ b/misc/maintenance/bin/migrate-2.0.8
@@ -35,7 +35,7 @@ def migrate_app(rhlogin, app_name)
                              :application => app_name,
                              :app_type => framework,
                              :namespace => user.namespace,
-                             :version => '2.0.7') do |response|
+                             :version => '2.0.8') do |response|
                 exit_code = response[:body][:data][:exitcode]
                 output = response[:body][:data][:output]
                 if (output.length > 0)
@@ -45,14 +45,15 @@ def migrate_app(rhlogin, app_name)
                   out << "Migrate on node exit code: #{exit_code}\n"
                   raise "Failed migrating app. Rerun with: #{migrate_cmd}"
                 else
-                  if framework == 'jenkins-1.4'
-                    migrated = redeploy_httpd_proxy(app, out)
-                    if migrated
+                  #migrated = redeploy_httpd_proxy(app, out)
+                  migrated = true
+                  if migrated
+                    begin
                       restart_app(app, out)
+                    rescue Exception => e
+                      migrate_cmd += " # Failed to restart"
+                      raise
                     end
-                  else
-                    restart_app(app, out)
-                    migrated = true
                   end
                 end
               end
@@ -72,45 +73,6 @@ def migrate_app(rhlogin, app_name)
     raise "#{e.message}\n#{e.backtrace}\nOutput:\n#{out.string}"
   end
   out.string
-end
-
-#
-# Update node profile (only 2.0.6->2.0.7)
-#
-def object_node_profile(obj)
-  begin
-    old = obj.node_profile
-    if obj.node_profile == "std"
-      obj.node_profile = "small"
-    elsif obj.node_profile == "large"
-      obj.node_profile = "medium"
-    end
-    if old != obj.node_profile
-      return true
-    end
-  rescue NoMethodError
-  end
-  return false
-end
-
-def update_node_profile(app)
-  changed = false
-
-  objects = [ app ]
-  app.group_instances.each do |g|
-    g.gears.each do |gear|
-      objects << gear
-    end
-  end
-
-  objects.each do |obj|
-    changed = changed | object_node_profile(obj)
-  end
-
-  if changed
-    app.save
-  end
-
 end
 
 def restart_app(app, out)
@@ -144,8 +106,19 @@ def restart_app(app, out)
     rescue Exception => e
       out << "WARNING: Error force stopping app '#{app.name}' with uuid '#{app.gear.uuid}' on node '#{app.gear.server_identity}': #{e.message}\n"
     end
-    out << "Restarting app '#{app.name}' with uuid '#{app.gear.uuid}' on node '#{app.gear.server_identity}'\n"
-    reply.append app.container.restart(app, app.gear, app.framework)
+    num_tries = 2
+    (1..num_tries).each do |i|
+      out << "Restarting app '#{app.name}' with uuid '#{app.gear.uuid}' on node '#{app.gear.server_identity}'\n"
+      begin
+        reply.append app.container.restart(app, app.gear, app.framework)
+      rescue Exception => e
+        if i == num_tries
+          out << "Failed to restart '#{app.name}' with uuid '#{app.gear.uuid}' on node '#{app.gear.server_identity}' after #{num_tries} tries with exception: #{e.message}\n"
+          raise
+        end
+      end
+    end
+    
   else
     out << "Leaving app stopped '#{app.name}' with uuid '#{app.gear.uuid}' on node '#{app.gear.server_identity}'\n"
   end
@@ -195,7 +168,7 @@ def redeploy_httpd_proxy(app, out)
 end
 
 #
-# Migrate applications between 2.0.6 and 2.0.7
+# Migrate applications between 2.0.7 and 2.0.8
 #
 def migrate(continue=false, target_server_identity=nil)
   start_time = Time.now.to_i
@@ -216,61 +189,6 @@ def migrate(continue=false, target_server_identity=nil)
   all_rhlogins_length = users.length
   app_cnt = 0
   puts "RHLogins.length: #{all_rhlogins_length.to_s}"
-  
-  #Migrate jenkins_url to https
-  users.each do |user|
-    if user.env_vars && user.env_vars.has_key?('JENKINS_URL')
-      jenkins_url = user.env_vars['JENKINS_URL']
-      if jenkins_url.start_with?("http://")
-        puts "Updating jenkins env var for user: #{user.login}"
-        jenkins_url = "https://#{jenkins_url[7..-1]}"
-        user.env_vars['JENKINS_URL'] = jenkins_url
-        user.save
-      end
-      apps = user.applications
-      apps.each do |app|
-        unless app.embedded.nil?
-          app.embedded.each do |cart, cart_info|
-            if cart == 'jenkins-client-1.4'
-              if cart_info['info'].include?('http://')
-                puts "Updating jenkins job url for user: #{user.login} with app: #{app.name}"
-                info = cart_info['info'].gsub(/http:\/\//, 'https://')
-                app.set_embedded_cart_info(cart, info)
-                app.save
-              end
-            end
-          end
-        end
-      end
-    end
-  end
-  
-  #Migrate the app/gear sizes
-  users.each do |user|
-    unless user.env_vars.nil?
-      user.env_vars.each_key do |key|
-        user.env_vars[key] = user.env_vars[key].gsub("/var/lib/libra", "/var/lib/stickshift")
-        user.env_vars[key] = user.env_vars[key].gsub("/usr/libexec/li", "/usr/libexec/stickshift")
-        user.save
-      end
-    end
-  end
-
-  #Migrate the app/gear sizes
-  users.each do |user|
-    user.applications.each do |app|
-      update_node_profile(app)
-    end
-  end
-
-  # Migrate the district sizes
-  districts = District.find_all()
-  districts.each do |district|
-    if object_node_profile(district)
-      district.save
-    end
-  end
-
   
   node_to_apps = {}
   node_to_users = {}
