--- a/cartridges/perl-5.10/template/.openshift/markers/README
+++ b/cartridges/perl-5.10/template/.openshift/markers/README
@@ -6,6 +6,6 @@ Adding marker files to this directory will have the following effects:
 force_clean_build - Will remove all previous perl deps and start installing
     required deps from scratch
 
-disable_cpan_tests - Will install all the cpan packages without
-    running their tests
+enable_cpan_tests - Will install all the cpan packages and run
+    their tests
 
