--- a/misc/maintenance/bin/migrate-2.0.8
+++ b/misc/maintenance/bin/migrate-2.0.8
@@ -106,6 +106,7 @@ def restart_app(app, out)
       out << "Restarting app '#{app.name}' with uuid '#{app.gear.uuid}' on node '#{app.gear.server_identity}'\n"
       begin
         reply.append app.container.restart(app, app.gear, app.framework)
+        break
       rescue Exception => e
         if i == num_tries
           out << "Failed to restart '#{app.name}' with uuid '#{app.gear.uuid}' on node '#{app.gear.server_identity}' after #{num_tries} tries with exception: #{e.message}\n"
