The optimize attribute was removed in this release; neded to be purged from mongodb.

--- a/misc/maintenance/bin/migrate-mongo-2.0.8
+++ b/misc/maintenance/bin/migrate-mongo-2.0.8
@@ -42,6 +42,7 @@ def mongo_migrate
     if user["apps"]
       user["apps"].each do |app|
         app["domain"] = domain
+        app.delete("optimize")
       end
     end
     user.delete("namespace")
