--- a/misc/maintenance/bin/migrate-mongo-2.0.8
+++ b/misc/maintenance/bin/migrate-mongo-2.0.8
@@ -34,23 +34,30 @@ def mongo_migrate
   users = $coll.find()
   users.each do |user|
     puts "Processing user #{user['login']}"
-    namespace = user["namespace"]
-    if namespace
+    if not user["namespace"].nil?
       uuid = StickShift::Model.gen_uuid
-      domain = {"uuid" => uuid, "namespace"  => namespace}
+      domain = {"uuid" => uuid, "namespace"  => user["namespace"]}
       user["domains"] = [domain]
-      if user["apps"]
-        user["apps"].each do |app|
-          app["domain"] = domain
-          app.delete("optimize") if app["optimize"]
+      user.delete("namespace")
+    end
+    if user["apps"]
+      user["apps"].each do |app|
+        app["domain"] = user["domains"][0] if app["domain"].nil?
+        app.delete("optimize") if not app["optimize"].nil?
+        if app["group_instances"]
+          app["group_instances"].each do |gi|
+            gi['gears'].each do |gear|
+              gear['name']=app['name'] if gear['name'].nil? and not app['scalable']
+            end
+          end
         end
       end
-      user.delete("namespace")
-      puts "User #{user}"
-      $coll.update({ "_id" => user["login"] }, user)
     end
-   end
+    puts "User #{user}"
+    $coll.update({ "_id" => user["login"] }, user)
+  end
 end
+
 
 mongo_connect
 puts "User migration Started"
