Bug 804937 - Update to use the correct exit code for the message

--- a/site/config/locales/en.yml
+++ b/site/config/locales/en.yml
@@ -57,7 +57,7 @@ en:
     errors:
       '116': 'Type is required and cannot be blank.'
       '121': 'You have already saved this public key with a different name. Provide a different key here.'
-      '143': 'You must create a Jenkins application as a server before you can add the Jenkins cartridge to an application.'
+      '151': 'You must create a Jenkins application (to act as a build server) before you can add the Jenkins cartridge to an application.'
 
   recaptcha:
     errors:
